refactor - use js class

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
-  <html>
+  <html lang="en">
     <head>
+      <title>Countdown</title>
       <meta charset="UTF-8">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -59,7 +60,7 @@
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script type="text/javascript" src="js/moment.js"></script>
-      <script type="text/javascript" src="js/timer.js"></script>
+      <script type="text/javascript" src="js/countDownClock.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
     </body>
   </html>
